# kdevelop

./: README.md  clangtest.c  test.c  test.h
languages/cpp/: CMakeLists.txt  cpplanguagesupport.cpp  cppparsejob.cpp  cppparsejob.h  includepathresolver.cpp  preprocessjob.cpp
languages/cpp/clang/: CMakeLists.txt  clangdiagnostics.cpp  clangdiagnostics.h  clangparsejob.cpp  clangparsejob.h  clangparsejob_old.cpp  oldclangparsejob.cpp
languages/cpp/parser/: languagefeatures.h  lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.cpp  tokens.h
languages/cpp/parser/rpp/: pp-macro-expander.cpp
languages/cpp/parser/tests/: test_parser.cpp  test_parser.h
